--- a/src/app/finca/detalles-finca/detalles-finca.component.html
+++ b/src/app/finca/detalles-finca/detalles-finca.component.html
@@ -85,7 +85,7 @@
         </div>        
         <div class="div-buttons">
             <button mat-raised-button class="edit-button" routerLink="/dashboard/editar-finca">Editar</button>
-            <button mat-raised-button class="cancel-button" routerLink="/dashboard/home">Cancelar</button>
+            <button mat-raised-button class="cancel-button" routerLink="/dashboard/home">Volver</button>
         </div>
     </div>   
 </form>
