--- a/src/app/liquidacion/detalles-liquidacion/detalles-liquidacion.component.scss
+++ b/src/app/liquidacion/detalles-liquidacion/detalles-liquidacion.component.scss
@@ -23,45 +23,14 @@ h2 {
     height: fit-content;
 }
 
-/* Encabezado del formulario */
-.form-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 15px;
-    margin-top: 10px;
-    border: 2px solid #00796b;
-    border-radius: 10px;
-    width: fit-content;
-    height: fit-content;
-    margin-bottom: 10px;
-    margin-right: 70px;
-    margin-left: 20px;
-}
-
-.form-group {
-    flex-direction: column;
-}
-
-.label {
-    flex-basis: 100%;
-    font-size: 1rem;
-    color: hsl(0, 0%, 20%);
-    width: fit-content;
-    margin-right: 30px;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-}
-
 .div-buttons{
     position: absolute;
-    top: 5; 
+    top: 50; 
     right: 0;
     margin-right: 20px; 
     width: auto;
     height: auto;
-    //display: flex;
+    display: flex;
   }
 
 .edit-button{
@@ -86,25 +55,17 @@ h2 {
     margin-left: 20px;
     margin-right: inherit;
     --bs-gutter-x: 0;
-    margin-top: 30px;
 }
 
+/* Título de la tabla */
 h1 {
     font-weight: bold;
     color: black;
-    margin: unset;
-    margin-top: -30px;
-    background-color: #e8f5e9;
-    width: fit-content;
-    margin-bottom: 10px;
 }
 
-.data{
-    margin-right: 30px;
-}
-
-.group{
-    display: flex;
+h3 {
+    //font-weight: bold;
+    color: black;
 }
 
 /* Estilo de la tabla */
@@ -139,63 +100,26 @@ h1 {
     background-color: rgba(0, 0, 0, 0.05);
 }
 
-/* Estilo para los botones de la tabla */
-.btn {
-    font-size: 12px; /* Tamaño de fuente más pequeño para los botones */
-}
-
 .click:hover {
     text-decoration: underline;
     cursor: pointer;
 }
 
 /* Media queries para pantallas pequeñas */
-@media only screen and (max-width: 1510px) {
+@media only screen and (max-width: 1600px) {
     .user-form {
         align-items: flex-start;
     }
 
-    .form-header {
-        width: 100%;
-        display: inherit !important;
-    }
-
     .flex{
         flex-direction: column;
-        align-items: left;
-        width: 100% !important;
-        margin-left: 0px;
-    }
-
-    .group {
-        display: inherit !important;
-    }
-    
-    .form-header{
-        width: 100%;
-        margin-bottom: 20px;
-        width: 100% !important;
-        margin-left: 0px;
-    }
-
-    .form-group {
-        flex-direction: column;
-        margin-right: 0;
-        margin-left: 0;
-        width: 100% !important;
-    }
-
-    .container {
-        background-color: #e8f5e9;
-        border-radius: 8px;
-        margin-right: inherit;
-        --bs-gutter-x: 0;
-        margin-top: 30px;
-        margin-left: 0px;
-    }
+        width: fit-content;
+        height: fit-content;
+      }
 
     .div-buttons{
         position: inherit;
+        margin-left: 20px;
         width: fit-content;
         height: fit-content;
     }
@@ -210,12 +134,4 @@ h1 {
         color: black;
     } 
   
-    .user-form input, .user-form select {
-        width: 100%;
-        padding: 8px;
-        border-radius: 5px;
-        border: 1px solid #ccc;
-        font-size: 0.8rem;
-        margin-bottom: 10px;
-    }
 }
