--- a/src/app/parcela/detalles-parcela/detalles-parcela.component.html
+++ b/src/app/parcela/detalles-parcela/detalles-parcela.component.html
@@ -23,7 +23,7 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let usuario of usuariosParcela">
-                            <td>{{ usuario.nombre }}</td>
+                            <td routerLink="/dashboard/ver-perfil/{{usuario.id}}" class="click">{{ usuario.nombre }}</td>
                             <td>{{ usuario.apellido1 }} {{ usuario.apellido2 }}</td>
                             <td>{{ usuario.participacion }}</td>
                             <td>{{ usuario.fechaAlta | date:'dd/MM/yyyy' }}</td>
@@ -47,7 +47,7 @@
                     <h1>Datos</h1>
                     <div class="form-group">           
                         <div><span class="label" style="font-weight: bold;">Referencia catastral:</span> <span class="label">{{ parcelaConstruccion?.referenciaCatastral }}</span></div>
-                        <div><span class="label" style="font-weight: bold;">Uso principal:</span> <span class="label">{{ parcelaConstruccion?.usoPrincipal }}</span></div> 
+                        <div ><span class="label" style="font-weight: bold;">Uso principal:</span> <span class="label">{{ parcelaConstruccion?.usoPrincipal }}</span></div> 
                         <div><span class="label" style="font-weight: bold;">Escalera:</span> <span class="label">{{ parcelaConstruccion?.escalera }}</span></div>
                         <div><span class="label" style="font-weight: bold;">Planta:</span> <span class="label">{{ parcelaConstruccion?.planta }}</span></div>
                         <div><span class="label" style="font-weight: bold;">Puerta:</span> <span class="label">{{ parcelaConstruccion?.puerta }}</span></div>
@@ -68,28 +68,37 @@
             <div *ngIf="parcela?.referenciaCatastral" class="flex">
                 <div class="form-header">
                     <h1>Datos</h1>
-                    <div class="form-group">           
-                        <div><span class="label" style="font-weight: bold;">Referencia catastral:</span> <span class="label">{{ parcela?.referenciaCatastral }}</span></div>
-                        <div><span class="label" style="font-weight: bold;">Polígono:</span> <span class="label">{{ parcela?.poligono }}</span></div> 
-                        <div><span class="label" style="font-weight: bold;">Parcela:</span> <span class="label">{{ parcela?.parcela }}</span></div>
-                        <div><span class="label" style="font-weight: bold;">Paraje:</span> <span class="label">{{ parcela?.paraje }}</span></div>
-                        <div><span class="label" style="font-weight: bold;">Clase:</span> <span class="label">{{ parcela?.clase }}</span></div>
-                        <div><span class="label" style="font-weight: bold;">Uso principal:</span> <span class="label">{{ parcela?.usoPrincipal }}</span></div>
+                    <div class="form-group">
+                        <div class="group">
+                            <div class="data"><span class="label" style="font-weight: bold;">Referencia catastral:</span> <span class="label">{{ parcela?.referenciaCatastral }}</span></div>
+                            <div class="data"><span class="label" style="font-weight: bold;">Polígono:</span> <span class="label">{{ parcela?.poligono }}</span></div> 
+                            <div class="data"><span class="label" style="font-weight: bold;">Parcela:</span> <span class="label">{{ parcela?.parcela }}</span></div>
+                        </div>           
+                        <div class="group">
+                            <div class="data"><span class="label" style="font-weight: bold;">Paraje:</span> <span class="label">{{ parcela?.paraje }}</span></div>
+                            <div class="data"><span class="label" style="font-weight: bold;">Clase:</span> <span class="label">{{ parcela?.clase }}</span></div>
+                            <div class="data"><span class="label" style="font-weight: bold;">Uso principal:</span> <span class="label">{{ parcela?.usoPrincipal }}</span></div>
+                        </div>                       
                     </div>
                 </div>
                 <div class="form-header">
                     <h1>Características</h1>                               
                     <div class="form-group">
-                        <div><span class="label" style="font-weight: bold;">Superficie (m2):</span> <span class="label">{{ parcela?.superficie }} m2</span></div>
-                        <div><span class="label" style="font-weight: bold;">Valor del suelo:</span> <span class="label">{{ parcela?.valorSuelo }}</span></div> 
-                        <div><span class="label" style="font-weight: bold;">Valor construcción:</span> <span class="label">{{ parcela?.valorConstruccion }}</span></div>
-                        <div><span class="label" style="font-weight: bold;">Valor catastral:</span> <span class="label">{{ parcela?.valorCatastral }}</span></div>
-                        <div><span class="label" style="font-weight: bold;">Año valor:</span> <span class="label">{{ parcela?.anoValor }}</span></div>
-                        <div><span class="label" style="font-weight: bold;">Fecha de alta:</span> <span class="label">{{ parcela?.fechaAlta | date:'dd/MM/yyyy' }}</span></div>
-                        <div *ngIf="parcela?.fechaModificacion"><span class="label" style="font-weight: bold;">Fecha de modificación:</span><span class="label">{{ parcela?.fechaModificacion | date:'dd/MM/yyyy' }}</span></div>
-                        <div *ngIf="parcela?.fechaBaja"><span class="label" style="font-weight: bold;">Fecha de baja:</span> <span class="label">{{ parcela?.fechaBaja | date:'dd/MM/yyyy' }}</span></div>
+                        <div class="group">
+                            <div class="data"><span class="label" style="font-weight: bold;">Superficie (m2):</span> <span class="label">{{ parcela?.superficie }} m2</span></div>
+                            <div class="data"><span class="label" style="font-weight: bold;">Valor del suelo:</span> <span class="label">{{ parcela?.valorSuelo }}</span></div> 
+                            <div class="data"><span class="label" style="font-weight: bold;">Valor construcción:</span> <span class="label">{{ parcela?.valorConstruccion }}</span></div>
+                            <div class="data"><span class="label" style="font-weight: bold;">Fecha de alta:</span> <span class="label">{{ parcela?.fechaAlta | date:'dd/MM/yyyy' }}</span></div>
+                        </div>
+                        <div class="group">
+                            <div class="data"><span class="label" style="font-weight: bold;">Valor catastral:</span> <span class="label">{{ parcela?.valorCatastral }}</span></div>
+                            <div class="data"><span class="label" style="font-weight: bold;">Año valor:</span> <span class="label">{{ parcela?.anoValor }}</span></div>                            
+                            <div *ngIf="parcela?.fechaModificacion"><span class="label" style="font-weight: bold;">Fecha de modificación:</span><span class="label">{{ parcela?.fechaModificacion | date:'dd/MM/yyyy' }}</span></div>
+                            <div *ngIf="parcela?.fechaBaja"><span class="label" style="font-weight: bold;">Fecha de baja:</span> <span class="label">{{ parcela?.fechaBaja | date:'dd/MM/yyyy' }}</span></div>
+                        </div>    
+                        
                     </div>       
-                </div>
+                </div>   
             </div>
             <div class="container" *ngIf="parcela?.referenciaCatastral">
                 <h1>Subparcelas</h1>
@@ -111,12 +120,12 @@
                         </tr>
                     </tbody>
                 </table>
-            </div>
+            </div>           
         </div>        
         <div class="div-buttons">
             <div style="display: flex;">
                 <button mat-raised-button class="edit-button" routerLink="/dashboard/editar-parcela/{{referenciaCatastral}}">Editar</button>
-                <button mat-raised-button class="cancel-button" routerLink="/dashboard/detalles-finca">Cancelar</button>
+                <button mat-raised-button class="cancel-button" routerLink="/dashboard/detalles-finca">Volver</button>
             </div>            
             <button mat-button *ngIf="parcela?.referenciaCatastral" (click)="actualizarDatos()" style="height: 50px; width: 210px;  background-color: #00796b; color: white; margin-top: 10px">
                 <mat-icon>refresh</mat-icon>
