--- a/src/app/usuario/cambiar-contraseña/change-password.component.scss
+++ b/src/app/usuario/cambiar-contraseña/change-password.component.scss
@@ -7,16 +7,10 @@
     display: flex;
 }
 
-.propietarios{
-  display: flex;
-  width: fit-content;
-  margin-bottom: 20px;
-}
-
-.propietario {
-  margin: 0 10px;
-  width: fit-content;
-  box-sizing: border-box;
+.flex{
+    display: flex;
+    width: 100%;
+    height: fit-content;
 }
 
 h2 {
@@ -53,15 +47,6 @@ h1 {
     flex-direction: column;
 }
 
-.label {
-    font-size: 1rem;
-    color: hsl(0, 0%, 20%);
-    width: fit-content;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-}
-
 .user-form label {
     font-size: 0.8rem;
     color: hsl(0, 0%, 20%);
@@ -78,15 +63,6 @@ h1 {
     margin-bottom: 10px;
     width: 100%; 
     margin-right: 20px;
-}
-
-.user-form select {
-    padding: 8px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    font-size: 0.8rem;
-    margin-bottom: 10px;
-    width: 100%; 
 }
 
 .div-buttons{
@@ -116,13 +92,9 @@ h1 {
       align-items: left;
     }
 
-    .propietarios{
+    .flex{
       flex-direction: column;
       align-items: left;
-      width: 100%;
-    }
-    
-    .propietario {
       width: 100%;
     }
 
