--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -38,11 +38,10 @@
       </mat-menu>
       <mat-menu #user="matMenu">
         <button mat-menu-item routerLink="/dashboard/registrar-usuario">Registrar usuario</button>
-        <button mat-menu-item>Listar usuarios</button>
+        <button mat-menu-item routerLink="/dashboard/listar-usuarios">Listar usuarios</button>
       </mat-menu>
       <mat-menu #finca="matMenu">
         <button mat-menu-item routerLink="/dashboard/crear-finca">Crear Finca</button>
-        <button mat-menu-item routerLink="/dashboard/añadir-usuario">Añadir usuario a finca</button>
         <button mat-menu-item routerLink="/dashboard/detalles-finca">Ver detalles finca</button>
         <button mat-menu-item routerLink="/dashboard/crear-parcela">Añadir parcela</button>        
       </mat-menu>
