--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -15,6 +15,13 @@ h2 {
     width: 100%;
 }
 
+h1 {
+    font-weight: bold;
+    color: black;
+    text-align: center;
+    margin-top: 15px;
+}
+
 .flex{
     display: flex;
     width: fit-content;
