--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -4,13 +4,14 @@
       <img class="avatar logo mat-elevation-z8" src="https://startupeable.com/directorio/wp-content/uploads/listing-uploads/logo/2021/10/AgroPro-logo.png" alt="">
       <div class="input-group">
         <label for="username">Usuario</label>
-        <input type="username" id="username" class="form-control">
+        <input type="username" id="username" class="form-control" (keydown.enter)="login()">
       </div>
       <div class="input-group">
         <label for="password">Contraseña</label>
-        <input type="password" id="password" class="form-control">
+        <input type="password" id="password" class="form-control" (keydown.enter)="login()">
       </div>
       <button type="button" (click)="login()" class="btn btn-primary">Login</button>
+      <a href="/assets/images/formulario.pdf" download class="download-link">Descargue el formulario de inscripción aquí</a>
     </div>
   </div>
 </div>
