--- a/src/app/finca/añadir-usuario/add-usuario.component.html
+++ b/src/app/finca/añadir-usuario/add-usuario.component.html
@@ -35,6 +35,6 @@
     </div>
     <div class="div-buttons">
         <button mat-raised-button class="create-button" (click)="add()">Añadir</button>
-        <button mat-raised-button class="cancel-button" routerLink="/dashboard/home">Cancelar</button>
+        <button mat-raised-button class="cancel-button" routerLink="/dashboard/detalles-finca">Cancelar</button>
     </div>       
 </form>
