FUNCIONA TODO FALTAN PERMISOS

--- a/src/app/parcela/crear-parcela/crear-parcela.component.html
+++ b/src/app/parcela/crear-parcela/crear-parcela.component.html
@@ -70,10 +70,10 @@
             </div>
         </div>
         <div class="flex" *ngIf="tipoParcela === 'parcela'">
-            <div class="form-header" style="margin-left: 15px;">
+            <div class="form-header" style="width: fit-content;">
                 <h1>Referencia catastral</h1>
-                <div class="form-group">           
-                    <input type="text" id="referencia" name="referencia" required><br>
+                <div class="form-group" style="width: fit-content; margin: inherit !important">           
+                    <input style="width: 250px; margin-right: 0px;" type="text" id="referencia" name="referencia" required><br>
                 </div>
             </div>
         </div>                                      
